--- a/crew.html
+++ b/crew.html
@@ -98,6 +98,6 @@
       </div>
     </main>
     <script src="js/header.js"></script>
-    <script type="module" src="js/crew.js"></script>
+    <script src="js/crew.js"></script>
   </body>
 </html>
