--- a/destination.html
+++ b/destination.html
@@ -113,6 +113,6 @@
       </div>
     </main>
     <script src="js/header.js"></script>
-    <script type="module" src="js/destination.js"></script>
+    <script src="js/destination.js"></script>
   </body>
 </html>
