--- a/technology.html
+++ b/technology.html
@@ -90,6 +90,6 @@
       </div>
     </main>
     <script src="js/header.js"></script>
-    <script type="module" src="js/technology.js"></script>
+    <script src="js/technology.js"></script>
   </body>
 </html>
