--- a/destination.html
+++ b/destination.html
@@ -112,7 +112,7 @@
         </div>
       </div>
     </main>
-    <script src="js/header.js"></script>
-    <script src="js/destination.js"></script>
+    <script src="header.js"></script>
+    <script src="destination.js"></script>
   </body>
 </html>
