--- a/crew.html
+++ b/crew.html
@@ -97,7 +97,7 @@
         </div>
       </div>
     </main>
-    <script src="js/header.js"></script>
-    <script src="js/crew.js"></script>
+    <script src="header.js"></script>
+    <script src="crew.js"></script>
   </body>
 </html>
