--- a/technology.html
+++ b/technology.html
@@ -89,7 +89,7 @@
         />
       </div>
     </main>
-    <script src="js/header.js"></script>
-    <script src="js/technology.js"></script>
+    <script src="header.js"></script>
+    <script src="technology.js"></script>
   </body>
 </html>
