--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
         >Explore</a
       >
     </main>
-    <script src="header.js"></script>
+    <script src="js/header.js"></script>
   </body>
 </html>
